--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
   "require": {
     "php": "~7.2",
     "typo3/cms-core": "^9.5 || ^10.4",
-    "mediatis/formrelay": "^4.2"
+    "mediatis/formrelay": "dev-feature/LMSCB-16_async_submission",
+    "form-relay/mail": "dev-feature/LMSCB-16_async_submission"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^2.0",
