--- a/composer.json
+++ b/composer.json
@@ -32,13 +32,14 @@
   ],
   "require": {
     "php": "~7.2",
-    "typo3/cms-core": "^9.5 || ^10.4",
-    "mediatis/formrelay": "^5.0",
-    "form-relay/mail": "^2.0"
+    "typo3/cms-core": "^10.4 || ^11.5",
+    "mediatis/formrelay": "^5.0 || ^6.0",
+    "form-relay/mail": "^3.0",
+    "symfony/mailer": "^5.3.4"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^2.0",
-    "nimut/testing-framework": "^4.1.5"
+    "nimut/testing-framework": "^5.3.0"
   },
   "autoload": {
     "psr-4": {
@@ -66,8 +67,8 @@
   },
   "extra": {
     "typo3/cms": {
-      "cms-package-dir": "{$vendor-dir}/typo3/cms",
-      "web-dir": ".Build/Web"
+      "web-dir": ".Build/Web",
+      "extension-key": "formrelay_mail"
     }
   }
 }
