--- a/composer.json
+++ b/composer.json
@@ -38,8 +38,8 @@
     "symfony/mailer": "^5.3.4"
   },
   "require-dev": {
-    "friendsofphp/php-cs-fixer": "^2.0",
-    "nimut/testing-framework": "^5.3.0"
+    "nimut/testing-framework": "^5.0.3",
+    "typo3/coding-standards": "^0.5.2"
   },
   "autoload": {
     "psr-4": {
